--- a/index.html
+++ b/index.html
@@ -5,5 +5,22 @@
             <title>MDD Project</title>
             <meta charset="utf-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <link href="css/bootstrap.min.css" rel="stylesheet">
+            <link href="css/custom.css" rel="stylesheet">
+            <script src="js/respond.min.js"></script>
+
         </head>
+
+        <body>
+            <header>
+
+            </header>
+            <!-- javascript -->
+            <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+            <script src="js/bootstrap.min.js"></script>
+            <footer>
+
+            </footer>
+
+        </body>
     </html>
