--- a/index.html
+++ b/index.html
@@ -4,23 +4,28 @@
         <head>
             <title>MDD Project</title>
             <meta charset="utf-8">
+            <!--Bootstrap setup files-->
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link href="css/bootstrap.min.css" rel="stylesheet">
             <link href="css/custom.css" rel="stylesheet">
             <script src="js/respond.min.js"></script>
+            <!--Angular setup Files-->
+            <script src="lib/angular/angular.min.js"></script>
+            <script src="lib/angular/angular-route.js"></script>
+            <script src="lib/angular/angular-animate.min.js"></script>
+
+            <!--MVC JS FILES-->
+            <script src="js/app.js"></script>
+            <script src="js/controllers.js"></script>
 
         </head>
 
         <body>
-            <header>
-
-            </header>
+        <div class="main" ng-view>
+            <!--<h1>hi</h1> DISPLAYS AS HOME PAGE, THIS NEEDS TO BE REROUTED TO LIST.HTML-->
             <!-- javascript -->
             <script src="http://code.jquery.com/jquery-latest.min.js"></script>
             <script src="js/bootstrap.min.js"></script>
-            <footer>
-
-            </footer>
-
+        </div>
         </body>
     </html>
