View For Listing, View for Details

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <meta charset="utf-8">
             <!--CSS-->
             <link href="css/bootstrap.min.css" rel="stylesheet">
+            <link href="css/bootstrap-theme.min.css" rel="stylesheet">
             <link href="css/app.css" rel="stylesheet">
             <!--Angular setup Files-->
             <script src="lib/angular/angular.min.js"></script>
