--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!doctype html>
     <html lang="en" ng-app="myApp">
         <head>
-            <title>Movies in Theaters</title>
+            <title>Now Playing</title>
             <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
             <!--CSS-->
-            <link href="css/bootstrap.min.css" rel="stylesheet">
-            <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+            <link href="css/bootstrap.css" rel="stylesheet">
             <link href="css/app.css" rel="stylesheet">
             <!--Angular setup Files-->
             <script src="lib/angular/angular.min.js"></script>
